set up the skeleton for mu to e conversion

--- a/templates/f_to_f_conversion.hpp.in
+++ b/templates/f_to_f_conversion.hpp.in
@@ -32,6 +32,7 @@ namespace flexiblesusy {
 class @ModelName@_mass_eigenstates;
 
 namespace @ModelName@_f_to_f_conversion {
+enum class Nucleus { Au };
 @FToFConversion_InterfacePrototypes@
 }
 } // namespace flexiblesusy
