--- a/templates/observables.cpp.in
+++ b/templates/observables.cpp.in
@@ -23,6 +23,7 @@
 #include "@ModelName@_a_muon.hpp"
 #include "@ModelName@_edm.hpp"
 #include "@ModelName@_mu_to_egamma.hpp"
+#include "@ModelName@_f_to_f_conversion.hpp"
 #include "@ModelName@_effective_couplings.hpp"
 #include "gm2calc_interface.hpp"
 #include "eigen_utils.hpp"
@@ -40,6 +41,7 @@
 #define EDM1(p,idx) edm_ ## p ## _ ## idx
 #define MuEGamma0(p) mu_to_egamma_ ## p
 #define MuEGamma1(pIn,idxIn,pOut,idxOut,spec) pIn ## _to_ ## pOut ## _ ## spec
+#define FToFConversion1(pIn,idxIn,pOut,idxOut,nuclei) pIn ## _to_ ## pOut ## _ ## in_nucleus
 #define EFFCPHIGGSPHOTONPHOTON eff_cp_higgs_photon_photon
 #define EFFCPHIGGSGLUONGLUON eff_cp_higgs_gluon_gluon
 #define EFFCPPSEUDOSCALARPHOTONPHOTON eff_cp_pseudoscalar_photon_photon
