first working version of mu to e conversion calculation

--- a/templates/f_to_f_conversion.cpp.in
+++ b/templates/f_to_f_conversion.cpp.in
@@ -61,6 +61,32 @@ inline double sm_width(int generationIndex1,  int generationIndex2, const @Model
    return GF*GF * pow(leptonInMass,5) * (1.0 - 8.0*ratio ) * (1.0 + 0.5 * Alpha * (6.25-Sqr(Pi))/Pi)/(192.0*pow(Pi,3));
 }
 */
-@FToFConversion_InterfaceDefinitions@
+
+struct overlap_integrals {
+   double D;
+   double Vp;
+   double Vn;
+   double Sp;
+   double Sn;
+};
+
+overlap_integrals get_overlap_integrals(Nucleus N) {
+  overlap_integrals res; 
+  switch (N) {
+     // Tab. 2 of hep-ph/0203110
+     case Nucleus::Au:
+      res.D  = 0.1670;
+      res.Vp = 0.0859;
+      res.Vn = 0.1080;
+      res.Sp = 0.0523;
+      res.Sn = 0.0610;
+      return res;
+     default:
+      std::cout << "Unknown nucleus\n";
+      break;
+  } 
 }
+
+@FToFConversion_InterfaceDefinitions@
+} // namespace @ModelName@_f_to_f_conversion
 } // namespace flexiblesusy
