include gm2calc_interface.hpp only if ENABLE_GM2Calc is defined

--- a/templates/observables.cpp.in
+++ b/templates/observables.cpp.in
@@ -23,12 +23,16 @@
 #include "@ModelName@_a_muon.hpp"
 #include "@ModelName@_edm.hpp"
 #include "@ModelName@_effective_couplings.hpp"
-#include "gm2calc_interface.hpp"
+#include "config.h"
 #include "eigen_utils.hpp"
 #include "numerics2.hpp"
 #include "wrappers.hpp"
 #include "lowe.h"
 #include "physical_input.hpp"
+
+#ifdef ENABLE_GM2Calc
+#include "gm2calc_interface.hpp"
+#endif
 
 #define MODEL model
 #define AMU a_muon
