--- a/templates/f_to_f_conversion.hpp.in
+++ b/templates/f_to_f_conversion.hpp.in
@@ -28,6 +28,8 @@
 #ifndef @ModelName@_FToFConversion_H
 #define @ModelName@_FToFConversion_H
 
+#include "lowe.h"
+
 namespace flexiblesusy {
 class @ModelName@_mass_eigenstates;
 
