added skeleton for the calculation of fermion-fermion-massive gauge boson form factors

--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -42,9 +42,10 @@ MOD@CLASSNAME@_LIB := $(foreach M,$(MOD@CLASSNAME@_MOD),model_specific/$M/libmod
 LIB@CLASSNAME@_SRC := \
 		$(DIR)/@CLASSNAME@_a_muon.cpp \
 		$(DIR)/@CLASSNAME@_edm.cpp \
+		$(DIR)/@CLASSNAME@_FFV_form_factors.cpp \
+		$(DIR)/@CLASSNAME@_FFMassiveV_form_factors.cpp \
 		$(DIR)/@CLASSNAME@_mu_to_egamma.cpp \
 		$(DIR)/@CLASSNAME@_f_to_f_conversion.cpp \
-		$(DIR)/@CLASSNAME@_FFV_form_factors.cpp \
 		$(DIR)/@CLASSNAME@_effective_couplings.cpp \
 		$(DIR)/@CLASSNAME@_info.cpp \
 		$(DIR)/@CLASSNAME@_input_parameters.cpp \
@@ -75,9 +76,10 @@ LIB@CLASSNAME@_HDR := \
 		$(DIR)/@CLASSNAME@_a_muon.hpp \
 		$(DIR)/@CLASSNAME@_convergence_tester.hpp \
 		$(DIR)/@CLASSNAME@_edm.hpp \
+		$(DIR)/@CLASSNAME@_FFV_form_factors.hpp \
+		$(DIR)/@CLASSNAME@_FFMassiveV_form_factors.hpp \
 		$(DIR)/@CLASSNAME@_mu_to_egamma.hpp \
 		$(DIR)/@CLASSNAME@_f_to_f_conversion.hpp \
-		$(DIR)/@CLASSNAME@_FFV_form_factors.hpp \
 		$(DIR)/@CLASSNAME@_effective_couplings.hpp \
 		$(DIR)/@CLASSNAME@_ewsb_solver.hpp \
 		$(DIR)/@CLASSNAME@_ewsb_solver_interface.hpp \
