--- a/templates/f_to_f_conversion.cpp.in
+++ b/templates/f_to_f_conversion.cpp.in
@@ -28,16 +28,12 @@
 #include <complex>
 #include <iostream>
 
-#include "@ModelName@_f_to_f_conversion.hpp"
 #include "@ModelName@_mass_eigenstates.hpp"
-
 #include "@ModelName@_cxx_diagrams.hpp"
-#include "@ModelName@_FFV_form_factors.hpp"
 
-#define INPUTPARAMETER(p) context.model.get_input().p
-#define MODELPARAMETER(p) context.model.get_##p()
-#define DERIVEDPARAMETER(p) context.model.p()
-#define PHASE(p) context.model.get_##p()
+#include "@ModelName@_f_to_f_conversion.hpp"
+#include "@ModelName@_FFV_form_factors.hpp"
+#include "@ModelName@_FFMassiveV_form_factors.hpp"
 
 using namespace flexiblesusy;
 using namespace cxx_diagrams;
@@ -45,22 +41,6 @@ using namespace @ModelName@_FFV_form_factors;
 
 namespace flexiblesusy {
 namespace @ModelName@_f_to_f_conversion {
-   /*
-inline double sm_width(int generationIndex1,  int generationIndex2, const @ModelName@_mass_eigenstates& model ) {
-   @ModelName@_mass_eigenstates model_ = model;
-   EvaluationContext context{ model_ };
-   std::array<int, 1> indices1 = { generationIndex1 };
-   std::array<int, 1> indices2 = { generationIndex2 };
-
-   const auto leptonInMass = context.mass<Fe>(indices1);
-   const auto leptonOutMass = context.mass<Fe>(indices2);
-   const auto ratio = pow(leptonOutMass/leptonInMass,2);
-   const auto GF {1.1667e-5};
-   const double Alpha = Sqr(Fe::electric_charge * unit_charge(context))/(4*Pi);
-
-   return GF*GF * pow(leptonInMass,5) * (1.0 - 8.0*ratio ) * (1.0 + 0.5 * Alpha * (6.25-Sqr(Pi))/Pi)/(192.0*pow(Pi,3));
-}
-*/
 
 struct overlap_integrals {
    double D;
